k8sYamlFile/particulate_matter_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: particulate_matter_ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: particulate_matter_service
                port:
                  number: 8181
